chore: Update .gitignore to prevent large file commits
- Add patterns for model files (*.pth, *.pt, *.trt, *.onnx, *.gguf)
- Add patterns for quantized model files
- Add patterns for test and conversion scripts
- Prevent accidental commits of large binary files

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,28 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 
+# Large model files and binaries
+*.pth
+*.pt
+*.trt
+*.onnx
+*.gguf
+*.bin
+*.safetensors
+models/*_quantized
+models/*_depth_quantized
+models/*.gguf
+models/*.trt
+models/*.onnx
+
+# Temporary and test files
+test_*.py
+*_test.py
+*_example.py
+*_inference.py
+convert_*.py
+requirements_tensorrt.txt
+
 # SageMath parsed files
 *.sage.py
 
